clusters/hive/apps/homeassistant/k8s-manifests/homeassistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
    - host: home.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
